EKS/manifests/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-hello
  labels:
    app: nginx-hello
spec:
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
        - name: nginx-hello
          image: nginxdemos/hello
          ports:
            - containerPort: 80
