EKS/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello
  labels:
    app: nginx-hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
        - name: nginx-hello
          image: nginxdemos/hello
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/lib/nginx/config.json
              name: config
              subPath: config.json
      volumes:
        - name: config
          configMap:
            name: nginx-hello
