EKS/manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-hello
  namespace: default
spec:
  containers:
    - name: nginx-hello
      image: nginxdemos/hello
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
