EKS/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
spec:
  type: NodePort
  selector:
    app: nginx-hello
  sessionAffinity: "ClientIP"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
